force-app/main/default/objects/Invoice__c/fields/Billing_Profile__c.field-meta.xml
<CustomField>
    <fullName>Billing_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Profile</label>
    <referenceTo>Billing_Profile__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>