force-app/main/default/objects/Invoice__c/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <label>Cost Center / Job Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>