force-app/main/default/objects/Invoice__c/fields/Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Due_Date__c</fullName>
    <formula>Invoice_Date__c + 
CASE(
  TEXT(Billing_Profile__r.Payment_Terms__c),
  &quot;Due Upon Receipt&quot;, 0,
  &quot;Net 5&quot;, 5,
  &quot;Net 10&quot;, 10,
  &quot;Net 15&quot;, 15,
  &quot;Net 30&quot;, 30,
  &quot;Net 45&quot;, 45,
  &quot;Net 60&quot;, 60,
  &quot;Net 90&quot;, 90,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Due Date</label>
    <type>Date</type>
</CustomField>