force-app/main/default/objects/Invoice__c/fields/Invoice_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Period_End__c</fullName>
    <description>End date of the time period covered by this invoice</description>
    <label>Invoice Period End</label>
    <type>Date</type>
</CustomField>