force-app/main/default/objects/Invoice__c/fields/Invoice_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Period_Start__c</fullName>
    <description>Start date of the time period covered by this invoice</description>
    <label>Invoice Period Start</label>
    <type>Date</type>
</CustomField>