force-app/main/default/objects/Invoice__c/fields/Invoice_Statement_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Statement_Number__c</fullName>
    <description>System-generated sequential invoice statement number</description>
    <externalId>true</externalId>
    <label>Invoice Statement Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>