force-app/main/default/objects/Invoice__c/fields/Original_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Original_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the original invoice being credited</description>
    <label>Original Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>