force-app/main/default/objects/Invoice__c/fields/Total_Per_Diem_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Per_Diem_Days__c</fullName>
    <description>Total number of per diem days for this invoice - calculated from related timesheet data</description>
    <formula>IF(
    ISBLANK(Invoice_Period_Start__c) || ISBLANK(Invoice_Period_End__c), 
    0,
    Invoice_Period_End__c - Invoice_Period_Start__c + 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Per Diem Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>