force-app/main/default/objects/Invoice__c/fields/Total_Per_Diem_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Per_Diem_Hours__c</fullName>
    <description>Total per diem hours across all line items for this invoice - used for per diem summary template display</description>
    <label>Total Per Diem Hours</label>
    <summarizedField>Invoice_Line_Item__c.Per_Diem_Hours__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>